# ai-agents

agent-alfred/: .gitignore  agent.py  application.py  main.py  prompts.yaml  pyproject.toml
agent-alfred/configuration/: constants.py  prompts.yaml
agent-alfred/services/: agent.py  telegram.py
agent-alfred/tools/: gmail.py  light.py  search.py  weather.py
agent-alfred/utilities/: logging.py
room-agent/: .gitignore  main.py  pyproject.toml
room-agent/configuration/: constants.py
room-agent/tools/: light.py
