[project]
name = "agent-alfred"
version = "0.1.0"
description = "Alfred — an AI butler agent that assists with household tasks via Telegram."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "google-api-python-client>=2.190.0",
    "google-auth-httplib2>=0.3.0",
    "google-auth-oauthlib>=1.2.4",
    "httpx>=0.28.1",
    "ipykernel>=7.2.0",
    "pandas>=3.0.1",
    "python-telegram-bot>=22.6",
    "serpapi>=0.1.5",
    "smolagents[toolkit]>=1.24.0",
    "tabulate>=0.9.0",
]

[dependency-groups]
dev = [
    "ruff>=0.15.2",
]
